# recipe-ai

./: .gitignore  GEMINI.md  render.yaml
backend/: .env  GEMINI.md  app.py  auth.py  config.py  models.py  pyproject.toml  render.yaml  requirements.txt
backend/routes/: favorites.py  health.py  images.py  preferences.py  recipes.py  share.py
backend/services/: cache.py  firebase.py  limiter.py  llm.py  storage.py  usage.py
backend/tests/: conftest.py  test_health.py
firebase/: .firebaserc  GEMINI.md
firebase/functions/: index.js  package-lock.json  package.json
frontend/: GEMINI.md  eslint.config.js  index.html  package-lock.json  package.json  server.js  vite.config.js
frontend/.react-router/types/: +routes.ts
frontend/.react-router/types/app/pages/+types/: Home.ts  Login.ts  NotFound.ts  Preferences.ts  (+2 more)
frontend/app/: entry.server.jsx  index.jsx  root.jsx  routes.ts
frontend/app/components/: AuthProvider.jsx  ChefHatIcon.jsx  LandingPage.jsx  Layout.jsx  RecipeSkeleton.jsx  RecipeView.jsx  Spinner.jsx  ThemeProvider.jsx
frontend/app/pages/: Home.jsx  NotFound.jsx  Preferences.jsx  RecipeDetail.jsx  SignUp.jsx
frontend/app/routes/: health.jsx  layout_app.jsx
frontend/app/styles/: HistorySkeleton.css  Home.css  LandingPage.css  Layout.css  Login.css  Preferences.css  RecipeDetail.css  RecipeSkeleton.css  RecipeView.css  index.css  variables.css
frontend/app/utils/: api.js
frontend/src/: App.css  App.jsx  AuthProvider.jsx  Home.css  Home.jsx  Login.css  Login.jsx  RecipeDetail.jsx  api.js  entry-client.jsx  entry-server.jsx  firebase.js  index.jsx  main.jsx
frontend/src/components/: AuthProvider.jsx  Header.jsx  HistorySkeleton.jsx  Layout.jsx  ModifierChip.jsx  ProtectedRoute.jsx  RecipeSkeleton.jsx  RecipeView.jsx  Spinner.jsx  ThemeProvider.jsx
frontend/src/pages/: Home.jsx  Login.jsx  Preferences.jsx  RecipeDetail.jsx  SignUp.jsx
frontend/src/styles/: Header.css  HistorySkeleton.css  Home.css  Layout.css  Login.css  ModifierChip.css  Preferences.css  RecipeDetail.css  RecipeSkeleton.css  Spinner.css  variables.css
frontend/src/utils/: api.js  authErrors.js  diffHelper.js
(+1 files in other folders)
